10/60/20-Alterações, de Relativi>>ConstrantLayout

--- a/PetsApp2/app/src/main/res/layout/activity_cadastro.xml
+++ b/PetsApp2/app/src/main/res/layout/activity_cadastro.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
@@ -10,118 +11,115 @@
     tools:context=".CadastroActivity"
     android:background="@drawable/login_wallpaper">
 
-    <RelativeLayout
-        android:id="@+id/name_layout_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="35dp">
-
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/back_arrow">
-
-        </ImageButton>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CADASTRO"
-            android:layout_centerInParent="true"
-            android:textSize="24sp"
-            android:textStyle="bold"/>
-
-    </RelativeLayout>
+    <ImageButton
+        android:id="@+id/btn_back_escolha"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/back_arrow"
+        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_hello_layout"
+        android:id="@+id/text_cadastro_layout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginTop="36dp"
+        android:text="CADASTRO"
         android:textAlignment="center"
-        android:text="Olá, cadastre-se para acompanhar as novidades do mundo pet."
-        android:layout_marginTop="70dp"
-        android:padding="20dp"
-        android:layout_centerHorizontal="true"
-        android:textSize="18dp"
-        android:textColor="@color/dark"/>
+        android:textColor="@color/dark"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/text_hello_cad_layout"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="380dp">
+        android:layout_marginTop="20dp"
+        android:text="Olá, cadastre-se para  acompanhar as novidades do mundo pet. "
+        android:textAlignment="center"
+        android:textColor="@color/dark"
+        android:textSize="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_cadastro_layout"/>
 
-        <EditText
-            android:id="@+id/email_cadastro"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:hint="Email"
-            android:padding="15dp"
-            android:background="@drawable/button_login">
-
-        </EditText>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/email_cadastro"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="450dp">
+        android:layout_marginTop="160dp"
+        android:background="@drawable/button_login"
+        android:hint="Email"
+        android:padding="15dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_hello_cad_layout" />
 
-        <EditText
-            android:id="@+id/senha_cadastro"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:hint="Senha"
-            android:padding="15dp"
-            android:background="@drawable/button_login">
-
-        </EditText>
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/senha_cadastro"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="520dp">
+        android:background="@drawable/button_login"
+        android:hint="Senha"
+        android:padding="15dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/email_cadastro"/>
 
-        <EditText
-            android:id="@+id/confirmar_senha_cadastro"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:hint="Confirmar Senha"
-            android:padding="15dp"
-            android:background="@drawable/button_login">
 
-        </EditText>
-
-    </RelativeLayout>
+    <EditText
+        android:id="@+id/confirmar_senha_cadastro"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_login"
+        android:hint="Confirmar Senha"
+        android:padding="15dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/senha_cadastro" />
 
     <Button
+        android:id="@+id/btn_go_cadastro"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:text="Cadastrar"
-        android:background="@drawable/button_next"
-        android:textColor="@color/dark"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/button_next"
+        android:text="Cadastrar"
+        android:textColor="@color/dark"
         android:textSize="18dp"
-        android:layout_marginTop="600dp"
-        style="?android:attr/borderlessButtonStyle"/>
-
-
+        android:layout_marginTop="18dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/confirmar_senha_cadastro"  />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Já possuí cadastro? Faça o login aqui."
-        android:textSize="16dp"
-        android:textColor="@color/dark"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="680dp"/>
+        android:text="Já possuí cadastro? Faça o login aqui."
+        android:textColor="@color/dark"
+        android:textSize="16dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_go_cadastro" />
 
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
