--- a/PetsApp2/app/src/main/res/layout/activity_splash.xml
+++ b/PetsApp2/app/src/main/res/layout/activity_splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,8 +13,13 @@
     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="250dp"
-        android:background="@drawable/logo"/>
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/logo" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
